--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -30,18 +30,9 @@ The infrastructure migration has the following key steps:
 . xref:Migrating_the_infrastructure[Migrating the infrastructure]
 +
 * Mapping the source resources to the target infrastructure
-* Creating and running a migration plan.
-
-.Troubleshooting information
-[NOTE]
-====
-To troubleshoot a migration:
-
-* xref:Vmware_to_rhv_migration_workflow[]
-* xref:Vmware_to_osp_migration_workflow[]
-* xref:Troubleshooting[]
-====
-
+* Creating and running a migration plan
++
+See xref:Vmware_to_rhv_migration_workflow[] and xref:Vmware_to_osp_migration_workflow[] for details.
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
