--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
@@ -1,11 +1,11 @@
 // Module included in the following assemblies:
 // con_Conversion_host_prerequisites.adoc
 [id="Changing_the_maximum_number_of_concurrent_migrations"]
-.(Optional) Changing the default maximum number of concurrent migrations
+= (Optional) Changing the maximum number of concurrent migrations
 
-The default maximum number of concurrent migrations is `10` for conversion hosts and `10` for a provider. You can change these limits to control the impact of the migration process on your infrastructure.
+You can change the maximum number of concurrent migrations for conversion hosts or providers to control the impact of the migration process on your infrastructure. The default is `10` for both a conversion host and a provider.
 
-A provider limit has priority over a conversion host limit. For example, if a provider's limit is set to `20` and five conversion hosts' limits are set to `3`, the maximum number of concurrent migrations is `20`, not `15`.
+The provider's limit has priority over the conversion hosts' limits. For example, if a provider's limit is set to `20` and five conversion hosts' limits are set to `3`, the maximum number of concurrent migrations is `20`, not `15`.
 
 .Changing the limit for conversion hosts
 
