--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -36,4 +36,4 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 Do not remove or change a provider before, during, or after migration because it has negative effects on the CloudForms migration objects.
 ====
 
-You are ready to xref:Creating_and_configuring_the_conversion_hosts[create and configure the conversion hosts].
+You are ready to xref:Configuring_conversion_hosts_in_CloudForms[configure the conversion hosts in CloudForms].
