--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
@@ -3,11 +3,12 @@
 [id="Migration_logs"]
 = Migration logs
 
-Check the logs to troubleshoot a failed migration.
+Check the logs to troubleshoot errors.
 
-.Downloading logs in CloudForms
+.Accessing the migration logs
 
-. In menu:Compute[Migration Plans > Migration Plans Complete], click a migration plan name to go to the details view.
+. In CloudForms, click menu:Compute[Migration Plans > Migration Plans Complete].
+. Click a migration plan name to go to the details view.
 . Click *Download Log* of a virtual machine and select a log from the dropdown list:
 
 * *Premigration log:* This option only appears if a premigration playbook is used.
@@ -21,8 +22,9 @@ Both the Migration log (`virt-v2v`) and the Virt-v2v-wrapper log are required fo
 ====
 
 [id="CloudForms_log"]
-.CloudForms log
+.Accessing the CloudForms log
 
 This log traces the orchestration of the virtual machine migration in CloudForms.
 
-Location: `/var/www/miq/vmdb/log/automation.log`
+. Log into the CloudForms machine using SSH.
+. Save the `/var/www/miq/vmdb/log/automation.log` file.
