--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
@@ -1,24 +1,22 @@
 // Module included in the following assemblies:
 // assembly_Creating_and_configuring_the_conversion_hosts.adoc
-[id="Creating_conversion_hosts"]
-= Creating the OpenStack Platform conversion hosts
 [id="Creating_OSP_conversion_hosts"]
-Create the OpenStack Platform conversion hosts.
+= Creating the OpenStack Platform conversion hosts
+
+Download the OpenStack Platform conversion appliance to create the conversion hosts.
 
 .Procedure
 
-. Download the OpenStack Platform conversion appliance:
-
-.. Go to the link:https://access.redhat.com/downloads/[Red Hat Customer Portal Product Downloads] site.
-.. In the *A-Z* tab, click *Red Hat OpenStack Platform*.
-.. Click the green *Download Latest* button to go to the OpenStack Platform download page.
-.. Click the *Product Software* tab and download the `RHOSP V2V Image for Red Hat OpenStack Director (x86_64)`.
+. Navigate to the link:https://access.redhat.com/downloads/[Red Hat Customer Portal Product Downloads] site.
+. In the *A-Z* tab, click *Red Hat OpenStack Platform*.
+. Click the green *Download Latest* button to go to the OpenStack Platform download page.
+. Click the *Product Software* tab and download the `RHOSP V2V Image for Red Hat OpenStack Director (x86_64)`.
 +
 [NOTE]
 ====
 Always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes.
 
-The conversion appliance for OpenStack Platform 14 may be used with OpenStack Platform 13.
+The OpenStack Platform 14 conversion appliance may be used with OpenStack Platform 13.
 ====
 
 . Upload the appliance to Glance storage.
@@ -29,12 +27,11 @@ The conversion appliance for OpenStack Platform 14 may be used with OpenStack Pl
 * `/var/tmp` (1 GB for each conversion)
 * `/var/logs` (5 GB)
 +
-[NOTE]
 ====
-For optimal performance:
+.For optimal performance
 
 * Deploy the conversion hosts on more than one hypervisor.
-* Deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. Nested virtualization is a technology preview.
+* Deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. Nested virtualization is a technology preview. IS THIS STILL RELEVANT?
 ====
 
 You are ready to xref:Configuring_conversion_hosts_in_CloudForms[configure the conversion hosts in CloudForms].
