--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -11,16 +11,28 @@ What am I migrating?::
 What is the maximum number of disks, virtual machines, or NICs that I can migrate?::
 * There is no maximum number of disks or virtual machines that you can migrate. However, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users.
 * You can migrate a maximum of four NICs with each virtual machine.
-* If you exceed the capabilities of your environment, the migrations will fail and may negatively affect existing applications running on virtual machines attached to the network and storage.
++
+[IMPORTANT]
+====
+If you exceed the capabilities of your environment, the migrations will fail. This situation could affect existing applications running on virtual machines attached to the network and storage.
+====
 
 What operating systems can I migrate?::
-* Supported guest operating systems: link:https://access.redhat.com/articles/1351473[]
-* Certified guest operating systems: link:https://access.redhat.com/articles/973163[]
-* Non-certified guest operating systems: Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, these guests are not officially supported.
+* For a list of supported guest operating systems, see link:https://access.redhat.com/articles/1351473[].
+* For a list of certified guest operating systems, see link:https://access.redhat.com/articles/973163[].
++
+[NOTE]
+====
+Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, these guests are not officially supported.
+====
 
 What resources does my target environment require?::
 * Your target environment must be large enough to run the migrated virtual machines in addition to the source virtual machines.
-* The source virtual machines are not affected by the migration process.
++
+[NOTE]
+====
+The source virtual machines are not affected by the migration process.
+====
 
 What am I missing?::
 * Identify resource gaps, such as bandwidth, storage, licenses, or a suitable maintenance window.
