--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
@@ -37,7 +37,7 @@ These recommendations can help you plan the migration to minimize the impact on 
 * Deploy OpenStack Platform conversion hosts on multiple hypervisors.
 * Choose an appropriate datapath transformation option. See xref:Choosing_vddk_or_ssh_transformation[].
 * Multiple migration plans allow you to control and throttle the migration process.
-* Perform test migrations with different xref:Changing_the_maximum_number_of_concurrent_migrations[maximum numbers of concurrent migrations per conversion host] to assess the capabilities of your environment's infrastructure.
+* Perform test migrations with different xref:Changing_the_maximum_number_of_concurrent_migrations[maximum numbers of concurrent migrations] to assess the capabilities of your environment's infrastructure.
 
 [id="Deciding_how_many_conversion_hosts_to_create"]
 == Deciding how many conversion hosts to create
@@ -51,7 +51,7 @@ Each conversion host is limited to ten concurrent migrations, unless you xref:Ch
 [id="Choosing_vddk_or_ssh_transformation"]
 == Choosing a datapath transformation option: VDDK or SSH
 
-You can choose either VMware Virtual Disk Development kit (VDDK) or SSH for your migration. This choice is determined by the number of virtual machines you intend to migrate and the capabilities of your infrastructure. The table below compares these options.
+You can choose either VMware Virtual Disk Development kit (VDDK) or SSH for your migration. This choice is determined by the number of virtual machines you intend to migrate and the capabilities of your infrastructure. The following table compares these options.
 
 [cols="1,2,2", options="header"]
 .VDDK and SSH comparison
