--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_in_CloudForms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_in_CloudForms.adoc
@@ -6,7 +6,7 @@
 Select, authenticate, and configure your conversion hosts in CloudForms.
 
 [id='VDDK_only_Downloading_and_copying_VDDK']
-.Prerequisite
+.Prerequisite for VDDK
 
 If you are using VDDK transformation, download the VMware Virtual Disk Development Kit:
 
@@ -26,28 +26,27 @@ You are ready to configure the conversion hosts in CloudForms.
 
 [cols="1,3", options="header"]
 |===
-^|Screen ^|Procedure
+|Screen |Procedure
 |*Location*
 .<a|. Select a *Provider Type*.
 . Select a *Provider*.
 
-. *Red Hat Virtualization:* Select a *Cluster*.
-+
-*OpenStack Platform:* Select a *Project*.
+. Select a Red Hat Virtualization *Cluster* or OpenStack Platform *Project*.
 
 . Click *Next*.
 |*Hosts*
 .<a|. Select one or more hosts from the dropdown list.
 . Click *Next*.
 |*Authentication*
-.<a|. Click *Browse* to browse to the conversion host SSH key or paste it in the *Conversion host SSH key* field.
+.<a|. Click *Browse* to browse to the SSH key or paste it in the *Conversion host SSH key* field.
 +
 [NOTE]
 ====
-* The RHV Manager deploys this private SSH key on the conversion hosts in order to send commands and run playbooks. The default key file is `/etc/pki/ovirt-engine/keys/engine_id_rsa` on the Manager machine.
+* The Red Hat Virtualization Manager deploys a private SSH key on the conversion hosts in order to send commands and run playbooks. The default key file is `/etc/pki/ovirt-engine/keys/engine_id_rsa` on the Manager machine.
 
-* The OpenStack Platform user uses this private SSH key to connect to the conversion hosts.
+* The OpenStack Platform user uses a private SSH key to connect to the conversion hosts.
 ====
+
 . Select a *Transformation method*.
 
 . *SSH:* Click *Browse* to browse to the VMware hypervisors SSH key or paste it in the *VMware hypervisors SSH key* field.
