--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
@@ -17,7 +17,7 @@ These recommendations can help you plan the migration to minimize the impact on 
 * Stagger the migration schedules.
 * Move critical applications during maintenance windows.
 
-.Spreading the load
+.Distributing the migration workload
 
 * Create migration groups, so that you are not migrating all of your virtual machines at the same time, keeping in mind the following considerations:
 
@@ -33,10 +33,15 @@ These recommendations can help you plan the migration to minimize the impact on 
 ** Web servers
 ** Load balancers
 
+.Deploying conversion hosts
+
 * Create multiple conversion hosts for load-balancing and improved performance. See xref:Deciding_how_many_conversion_hosts_to_create[].
+* Choose an appropriate datapath transformation option for the conversion hosts. See xref:Choosing_vddk_or_ssh_transformation[].
 * Deploy OpenStack Platform conversion hosts on multiple hypervisors.
-* Choose an appropriate datapath transformation option. See xref:Choosing_vddk_or_ssh_transformation[].
-* Multiple migration plans allow you to control and throttle the migration process.
+
+.Controlling the migration process
+
+* Create multiple migration plans for finer control over the migration process.
 * Perform test migrations with different xref:Changing_the_maximum_number_of_concurrent_migrations[maximum numbers of concurrent migrations] to assess the capabilities of your environment's infrastructure.
 
 [id="Deciding_how_many_conversion_hosts_to_create"]
