--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
@@ -3,16 +3,16 @@
 [id="Creating_and_configuring_the_conversion_hosts"]
 = Creating and configuring the conversion hosts
 
-A _conversion host_ is a Red Hat Virtualization host or an OpenStack Platform instance, created from a conversion host appliance, with `virt-v2v` and `virt-v2v-wrapper` installed. (`virt-v2v` and `virt-v2v-wrapper` perform the migration. See xref:Vmware_to_rhv_migration_workflow[] and xref:Vmware_to_osp_migration_workflow[] for details.)
+A _conversion host_ is a Red Hat Virtualization host or an OpenStack Platform instance, created from a conversion host appliance, with `virt-v2v` and `virt-v2v-wrapper` installed. See xref:Vmware_to_rhv_migration_workflow[] and xref:Vmware_to_osp_migration_workflow[] for details.
 
-Creating and configuring the conversion hosts involve the following key steps:
+You can select, authenticate, and configure your conversion hosts in CloudForms.
 
-. OpenStack Platform: xref:Creating_OSP_conversion_hosts[]
-. Red Hat Virtualization and OpenStack Platform: xref:Configuring_conversion_hosts_in_CloudForms[]
-+
 Optionally, you can change the maximum number of concurrent migrations for conversion hosts or a provider. See xref:Changing_the_maximum_number_of_concurrent_migrations[].
 
-PLACEHOLDER: MIGRATION THROTTLING 
+include::proc_Configuring_conversion_hosts_in_CloudForms.adoc[leveloffset=+1]
+include::proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
+
+PLACEHOLDER: MIGRATION THROTTLING
 
 .Upgrading the conversion hosts
 
@@ -25,7 +25,3 @@ PLACEHOLDER: MIGRATION THROTTLING
 ----
 
 * *OpenStack Platform:* Download the latest conversion appliance and create new conversion hosts.
-
-include::proc_Creating_osp_conversion_hosts.adoc[leveloffset=+1]
-include::proc_Configuring_conversion_hosts_in_CloudForms.adoc[leveloffset=+1]
-include::proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
