--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
@@ -1,5 +1,5 @@
 [[Creating_a_migration_plan]]
-== Creating a migration plan
+= Creating a migration plan
 
 . Click menu:Compute[Migration > Migration Plans].
 
